dist/1.0/bin/sample/retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>PersonLeadSource__c</fullName>
        <label>Person Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Care__c</fullName>
        <label>Primary Care</label>
        <picklist>
            <picklistValues>
                <fullName>INOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LNOC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP TOP Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP WHSL Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer which is reseller of GTS services.</description>
        <inlineHelpText>Customer which is reseller of GTS services.</inlineHelpText>
        <label>Reseller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Code__c</fullName>
        <description>Sales Code of Partner</description>
        <inlineHelpText>Sales Code of Partner</inlineHelpText>
        <label>Partner Code</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <inlineHelpText>Segment ... Potential Value

ME ... 10000 &lt;= P
LE+ ... 4000 &lt;= P &lt;= 10000
LE ... 2000 &lt;= P &lt;= 4000
SME+ ... 800 &lt;= P &lt;= 2000
SME  ... 200 &lt;= P &lt;= 800
SOHO+ ... 80 &lt;= P &lt;= 200
SOHO ... 0 &lt;= P &lt;= 80</inlineHelpText>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>SOHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOHO+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LE+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <label>Site Type</label>
        <picklist>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holding Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Representation of Source Sysem Record ID for migrated data</description>
        <externalId>true</externalId>
        <inlineHelpText>Representation of Source Sysem Record ID for migrated data</inlineHelpText>
        <label>Source Record Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Account Status</description>
        <inlineHelpText>Customer:
- Potential - Newly registered 
- Active - Customer with active Service / Billing Account
- Inactive - Former Customer 

Partner
- Potential - Newly registered 
- Active - Partner  cooperating with GTS
- Inactive - Former Partner</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that account is GTs supplier. SK specific</description>
        <inlineHelpText>Indicates that account is GTs supplier.</inlineHelpText>
        <label>Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <description>Identification Number for chosen Identification Type</description>
        <inlineHelpText>Identification Number for chosen Identification Type</inlineHelpText>
        <label>ID Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_identification_number__c</fullName>
        <description>Tax identification number. Value copied from Simplified Orders. SK only.</description>
        <inlineHelpText>Tax identification number as specified on Simplified Orders. SK only.</inlineHelpText>
        <label>Tax identification number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerField__c</fullName>
        <description>Temporary field to update record (value change it will involve the trigger)</description>
        <label>TriggerField</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turnover__c</fullName>
        <label>Turnover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueIDs__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Contains Uniqueness Verification String</description>
        <inlineHelpText>Contains Uniqueness Verification String</inlineHelpText>
        <label>UniqueIDs</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VAT_number__c</fullName>
        <description>Tax identification number. Value copied from Simplified Orders. SK only.</description>
        <inlineHelpText>Tax identification number as specified on Simplified Orders. SK only.</inlineHelpText>
        <label>VAT number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VIP customer indicator</description>
        <inlineHelpText>VIP customer indicator</inlineHelpText>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validated_By__c</fullName>
        <description>This field stores information about &quot;Account Validation&quot; field change: current date, user first and last name, current value, prior value.</description>
        <inlineHelpText>This field stores information about &quot;Account Validation&quot; field change: current date, user first and last name, current value, prior value.</inlineHelpText>
        <label>Validation Audit</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isTest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in test classes to avoid chcek unique id.</description>
        <inlineHelpText>Used in test classes to avoid chcek unique id.</inlineHelpText>
        <label>isTest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tel_regexp_validation__c</fullName>
        <label>tel regexp validation</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>AMT</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Supplier__c</columns>
        <columns>VAT_number__c</columns>
        <columns>Tax_Id__c</columns>
        <columns>Identification_type__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>contains</operation>
            <value>Partner</value>
        </filters>
        <filters>
            <field>Identification_type__c</field>
            <operation>equals</operation>
            <value>SCALA</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>interoute</value>
        </filters>
        <label>AMT</label>
    </listViews>
    <listViews>
        <fullName>AMT1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>VAT_number__c</columns>
        <columns>Tax_Id__c</columns>
        <columns>Identification_type__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>test123</value>
        </filters>
        <label>AMT1</label>
    </listViews>
    <listViews>
        <fullName>All_Comapny_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Status__c</columns>
        <columns>Account_Validation__c</columns>
        <columns>GTS_Location_del__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>intermatik</value>
        </filters>
        <filters>
            <field>VAT_number__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Comapny Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Domestic_accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.WholesaleCustomer,Account.RetailLocalCustomer</value>
        </filters>
        <label>All Domestic accounts</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_International_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.International_Wholesale,Account.RetailRegionalCustomer</value>
        </filters>
        <label>All International Accounts</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Status__c</columns>
        <columns>Account_Validation__c</columns>
        <columns>GTS_Location_del__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner</value>
        </filters>
        <label>All Partner Accounts</label>
    </listViews>
    <listViews>
        <fullName>Domestic_Retail</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.RetailLocalCustomer</value>
        </filters>
        <label>Domestic Retail Accounts</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>International_Retail</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>GTS_Location_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.RetailRegionalCustomer</value>
        </filters>
        <label>International Retail Accounts</label>
    </listViews>
    <listViews>
        <fullName>International_Wholesale</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>GTS_Location_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.International_Wholesale</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>International Wholesale Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>GTS_Location_del__c</columns>
        <columns>Status__c</columns>
        <columns>Account_Validation__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Personal_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Status__c</columns>
        <columns>Account_Validation__c</columns>
        <columns>GTS_Location_del__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Residential</value>
        </filters>
        <label>All Residential Accounts</label>
    </listViews>
    <listViews>
        <fullName>TEMP_Global_Crossing</fullName>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>PARENT_NAME</columns>
        <columns>Tax_Id__c</columns>
        <columns>Identification_type__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>GTS_Location_del__c</columns>
        <columns>ACCOUNT.CURRENCY_ISO_CODE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.OWNERSHIP</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GTS_Location_del__c</field>
            <operation>equals</operation>
            <value>GTS Hungary</value>
        </filters>
        <filters>
            <field>Status__pc</field>
            <operation>notEqual</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.International_Wholesale</value>
        </filters>
        <label>TEMP 1</label>
    </listViews>
    <listViews>
        <fullName>scala_MD</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tax_Id__c</columns>
        <columns>VAT_number__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>interoute</value>
        </filters>
        <label>scala_MD</label>
        <sharedTo>
            <groups>Accountancy</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>starts_with_AT</fullName>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tax_Id__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Identification_type__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>GTS_Location_del__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CURRENCY_ISO_CODE</columns>
        <columns>ACCOUNT.OWNERSHIP</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>global cross</value>
        </filters>
        <label>TEMP Global Crossing</label>
    </listViews>
    <namedFilters>
        <fullName>Account_00NT000000180b5MAA</fullName>
        <active>true</active>
        <field>Account.Partner_Account__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Partner Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>Lead_00N200000026MKnEAM</fullName>
        <active>true</active>
        <field>Lead.Partner_Account__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Lead_Partner Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00NT000000180dKMAQ</fullName>
        <active>true</active>
        <field>Opportunity.Partner_Account__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Opportunity_Partner Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000HEenEAG_00N20000002wYA3EAM</fullName>
        <active>true</active>
        <field>CContract__c.Partner_Owning_Agreement__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contract_Partner Owning Agreement</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000HEenEAG_00N20000002wYAcEAM</fullName>
        <active>true</active>
        <field>CContract__c.Partner_Signing__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contract_Partner Signing</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IT0000000D7BPMA0_00NT00000018bfSMAQ</fullName>
        <active>true</active>
        <field>OrderLine__c.Supplier__c</field>
        <filterItems>
            <field>Account.Supplier__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order Line_Supplier</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IT0000000DAAJMA4_00NT00000018XRaMAM</fullName>
        <active>true</active>
        <field>Simplified_Order__c.Partner_Account__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Simplified Order_Partner Account</name>
    </namedFilters>
    <recordTypes>
        <fullName>Company</fullName>
        <active>true</active>
        <description>Business company, public organization etc.</description>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Domestic_Company</fullName>
        <active>false</active>
        <description>Record Type for Domestic Business Customers</description>
        <label>Domestic Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>International_Wholesale</fullName>
        <active>true</active>
        <description>Wholesale International Customer</description>
        <label>International Wholesale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <description>Partner</description>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Residential</fullName>
        <active>true</active>
        <description>Residential customers</description>
        <label>Residential</label>
    </recordTypes>
    <recordTypes>
        <fullName>RetailLocalCustomer</fullName>
        <active>true</active>
        <description>Retail Domestic Customer</description>
        <label>Domestic Retail</label>
    </recordTypes>
    <recordTypes>
        <fullName>RetailRegionalCustomer</fullName>
        <active>true</active>
        <description>Retail International Customer</description>
        <label>International Retail</label>
    </recordTypes>
    <recordTypes>
        <fullName>WholesaleCustomer</fullName>
        <active>true</active>
        <description>Wholesale Domestic Customer</description>
        <label>Domestic Wholesale</label>
    </recordTypes>
    <validationRules>
        <fullName>Account_Owner_Modification</fullName>
        <active>true</active>
        <description>Modification of Account Owner allowed only for some Roles</description>
        <errorConditionFormula>AND( OwnerId != PRIORVALUE(OwnerId ) , ISPICKVAL( GTS_Location_del__c , &apos;GTS Slovakia&apos;) , $UserRole.Name != &apos;Domestic Sales Director SK&apos;, $UserRole.Name != &apos;Domestic Sales Support Director SK&apos;, $UserRole.Name != &apos;Domestic Sales Support SK&apos;,  $UserRole.Name != &apos;Front Office Manager SK&apos;,$UserRole.Name != &apos;Front Office Agent SK&apos; , $UserRole.Name != &apos;GTS CE IS VP&apos;,  $Profile.Name !=&apos;System Administrator&apos; )</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>You are not allowed to change Account Owner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Validation_security</fullName>
        <active>true</active>
        <description>Only selected users are allowed to change
(added temporary condition GTS Location GTS Slovakia because of PL migration)</description>
        <errorConditionFormula>( 
( 
($RecordType.Name = &quot;Company&quot; || 
$RecordType.Name = &quot;Partner&quot; || 
$RecordType.Name = &quot;Residential&quot; 
)&amp;&amp; 
( 
(ISNEW()&amp;&amp;TEXT(Account_Validation__c)&lt;&gt;&quot;Unverified&quot;&amp;&amp;$Profile.Id &lt;&gt;&quot;00e20000000qH2C&quot; &amp;&amp; Account_from_Lead__c = false&amp;&amp; TEXT( GTS_Location_del__c) &lt;&gt; &quot;GTS Slovakia&quot;)|| 
(ISNEW()&amp;&amp;TEXT(Account_Validation__c)&lt;&gt;&quot;Valid&quot;&amp;&amp;$Profile.Id &lt;&gt;&quot;00e20000000qH2C&quot; &amp;&amp; Account_from_Lead__c = true &amp;&amp; 
	((TEXT(GTS_Location_del__c) = &quot;GTS Poland&quot; &amp;&amp;$UserRole.Id &lt;&gt;&quot;00E200000012sdk&quot;&amp;&amp; $UserRole.Id &lt;&gt;&quot;00E20000000sPgg&quot;) ||
	(TEXT(GTS_Location_del__c) = &quot;GTS Czech Rep&quot; &amp;&amp; $UserRole.Id &lt;&gt;&quot;00E20000000sPga&quot; &amp;&amp; $Profile.Id &lt;&gt;&quot;00e20000000qH2C&quot;))
)
|| (ISCHANGED(Account_Validation__c) &amp;&amp; (TEXT(Account_Validation__c)= null || TEXT(Account_Validation__c)= &quot;&quot;)  &amp;&amp; TEXT(GTS_Location_del__c) = &quot;GTS Slovakia&quot; &amp;&amp; $Profile.Id &lt;&gt;&quot;00e20000000qH2C&quot;)
||
(ISCHANGED(Account_Validation__c) &amp;&amp; TEXT(GTS_Location_del__c) = &quot;GTS Poland&quot; &amp;&amp; $UserRole.Id &lt;&gt;&quot;00E20000000sPgg&quot;&amp;&amp;$UserRole.Id &lt;&gt;&quot;00E200000012sdk&quot; &amp;&amp; $Profile.Id &lt;&gt;&quot;00e20000000qH2C&quot;) || 
(ISCHANGED(Account_Validation__c) &amp;&amp; TEXT(GTS_Location_del__c) = &quot;GTS Czech Rep&quot; &amp;&amp; $UserRole.Id &lt;&gt;&quot;00E20000000sPga&quot; &amp;&amp; $Profile.Id &lt;&gt;&quot;00e20000000qH2C&quot;) 
) 
)|| 
( 
$RecordType.Name = &quot;International Wholesale&quot; &amp;&amp; ((ISCHANGED(Account_Validation__c) &amp;&amp; $UserRole.Id &lt;&gt;&quot;00E20000000sNDK&quot;&amp;&amp; $Profile.Id &lt;&gt;&quot;00e20000000qH2C&quot;) || 
(ISNEW()&amp;&amp;TEXT(Account_Validation__c)&lt;&gt;&quot;Unverified&quot;)) &amp;&amp;$Profile.Id &lt;&gt;&quot;00e20000000qH2C&quot; 
) 
)</errorConditionFormula>
        <errorDisplayField>Account_Validation__c</errorDisplayField>
        <errorMessage>1. To Create Account from Lead it has to be Valid - has to have all required data.
2. Account on Acccounts Tab can be created only with Unverified value.
3. Account Validation can be changed on Account only by Sales Support or Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address_is_required_for_Valid_Accounts</fullName>
        <active>true</active>
        <description>Change to Valid is not allowed if there is no Registration Address or it is incorrectly specified (i.e. missing in Account Contact section)

(addded temporary condition GTS Location GTS Slovakia because of PL migration )</description>
        <errorConditionFormula>IF ( TEXT( GTS_Location_del__c ) = &quot;GTS Slovakia&quot;, 
( 
(ISNEW()&amp;&amp;TEXT(Account_Validation__c)=&quot;Valid&quot;&amp;&amp;($RecordType.Name =&quot;Company&quot;||$RecordType.Name =&quot;Partner&quot;||$RecordType.Name =&quot;Residential&quot;)&amp;&amp; Account_from_Lead__c = false&amp;&amp; TEXT( GTS_Location_del__c) &lt;&gt; &quot;GTS Slovakia&quot;)|| 
(ISCHANGED(Account_Validation__c)&amp;&amp; TEXT(Account_Validation__c)=&quot;Valid&quot; &amp;&amp; ($RecordType.Name =&quot;Company&quot;||$RecordType.Name =&quot;Partner&quot;||$RecordType.Name =&quot;Residential&quot;)&amp;&amp; 
(LEN( trim(ShippingCity) &amp;trim(ShippingCountry) &amp; trim( ShippingStreet) &amp; trim(ShippingPostalCode))=0 ||Has_Address__c=false)) 
)
,false)</errorConditionFormula>
        <errorDisplayField>Account_Validation__c</errorDisplayField>
        <errorMessage>Change to Valid is not allowed if there is no Registration Address or it is incorrectly specified (i.e. missing in Account Contact section)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allow_ID_types_for_GTS_HU_Valid_Accounts</fullName>
        <active>true</active>
        <description>the rule checks it the proper ID type is selected for GTS HU Company Accounts when account is set to valid</description>
        <errorConditionFormula>and(if (CASE(Identification_type__c, &quot;Company registration number&quot;, 0, &quot;EU VAT&quot;,0,&apos;Tax ID&apos;,0,1)=1,true,false), Account_Record_Type_formula__c=&apos;Company&apos;, ISPICKVAL(GTS_Location_del__c, &apos;GTS Hungary&apos;),ISPICKVAL( Account_Validation__c ,&apos;Valid&apos;)   )</errorConditionFormula>
        <errorDisplayField>Identification_type__c</errorDisplayField>
        <errorMessage>The selected ID type can not be used for VALID GTS HU Accounts with Record type Company</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BirthDate_formatCheck</fullName>
        <active>true</active>
        <description>if ID Type &quot;Birth Date&quot; -&gt; ID Number must meet YYYYMMDD format</description>
        <errorConditionFormula>IF (
ISPICKVAL(Identification_type__c,&quot;Birth Date&quot;),
IF (
DATEVALUE(LEFT(Tax_Id__c,4)+&quot;-&quot;+ MID(Tax_Id__c, 5,2)+&quot;-&quot;+ MID(Tax_Id__c,7,2) ) &lt;&gt; DATEVALUE (&quot;1000-01-01&quot;)
&amp;&amp; (LEN(Tax_Id__c)=8),
false,
true
),
false
)</errorConditionFormula>
        <errorDisplayField>Tax_Id__c</errorDisplayField>
        <errorMessage>Birth Date must have YYYYMMDD format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BirthNumber_ID_Number_format_for_CZ</fullName>
        <active>true</active>
        <description>Verifies Birth Number&apos;s control sum for Czech Republic</description>
        <errorConditionFormula>IF(ISPICKVAL(GTS_Location_del__c,&quot;GTS Czech Rep&quot;)&amp;&amp;ISPICKVAL(Identification_type__c,&quot;Birth number&quot;),NOT(IF(ISNUMBER(Tax_Id__c)&amp;&amp;((LEN(Tax_Id__c)=9)||(LEN(Tax_Id__c)=10)),(IF((LEFT(Tax_Id__c,9)=&quot;111111111&quot;||LEFT(Tax_Id__c,9)=&quot;000101000&quot;),False,IF((VALUE(IF(VALUE(MID(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4),1,2))&gt;=12||LEN(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4))=10,&quot;19&quot;+MID(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4),1,2),&quot;20&quot;+MID(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4),1,2)))&gt;=1954&amp;&amp;LEN(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4))=10)||(VALUE(IF(VALUE(MID(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4),1,2))&gt;=12||LEN(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4))=10,&quot;19&quot;+MID(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4),1,2),&quot;20&quot;+MID(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4),1,2)))&lt;1954&amp;&amp;LEN(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4))=11),False,IF(

DATEVALUE(IF (
VALUE(MID(MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4)
, 1, 2)) &gt;=12||LEN(MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4)
)=10,
&quot;19&quot;+MID(MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4)
, 1, 2),
&quot;20&quot;+ MID(MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4)
, 1, 2)
)+ &quot;-&quot;+TEXT(IF (
VALUE(MID (MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4)
, 3, 1)) &gt;= 5,
VALUE (MID (MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4)
, 3, 1))-5,
VALUE(MID (MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4)
, 3, 1))
))+ MID(MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4), 4, 1)+ &quot;-&quot;+MID(MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4), 5, 1)+ MID(MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4), 6, 1) ) &lt;&gt; DATEVALUE (&quot;1000-01-01&quot;)


,IF(VALUE(IF(VALUE(MID(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4),1,2))&gt;=12||LEN(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4))=10,&quot;19&quot;+MID(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4),1,2),&quot;20&quot;+MID(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4)
,1,2)))&lt;1954,True,IF(IF(

MOD(VALUE(MID(MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4)
, 1, 6)+MID(MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4)
, 8, 3)),11) =10, 0, 
MOD(VALUE(MID(MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4)
, 1, 6)+MID(MID (Tax_Id__c, 1, 6)+&quot;/&quot;+ MID (Tax_Id__c, 7, 4)
, 8, 3)),11)

)=VALUE(MID(MID(Tax_Id__c,1,6)+&quot;/&quot;+MID(Tax_Id__c,7,4),11,1)),True,False)),False)))),False)),False)</errorConditionFormula>
        <errorDisplayField>Tax_Id__c</errorDisplayField>
        <errorMessage>Invalid RC format</errorMessage>
    </validationRules>
</CustomObject>